# lingo

./: .gitmodules  CMakeLists.txt  Makefile  README.md  TODO.txt  lingo.cpp  lingo.hpp  node.hpp  rule.cpp  rule.hpp  test.dot
include/: lingo.hpp
test/: parse-tests.cpp  parse.cpp
